# home

./: .gitignore  db.sqlite3  pyproject.toml
homesite/: settings.py  urls.py
index/: views.py
index/templates/index/: index.html
index/tests/: test_views.py
templates/: base.html
